name:                spock-examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spock-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Bryn Edwards
maintainer:          bryn@opmbx.org
copyright:           2017 Bryn Edwards
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      examples
  build-depends:       Spock >= 0.12.0.0
                     , base >= 4.7 && < 5
                     , blaze-html >= 0.8.1.3
                     , bytestring >= 0.10.8.1
                     , http-types >= 0.9.1
                     , mtl >= 2.2.1
                     , text >= 1.2.2.1
                     , unordered-containers >= 0.2.7.2
                     , warp >= 3.2.11
                     , warp-tls >= 3.2.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brynedwards/spock-examples
